--- a/largeimagegallerylib/src/main/res/values/strings.xml
+++ b/largeimagegallerylib/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">LargeImageGalleryLib</string>
+    <string name="save_image_success">图片已保存到/worktile/pictures中</string>
+    <string name="save_image_failed">保存图片失败</string>
+    <string name="save_origin_image">保存原图</string>
 </resources>
